import "gabriel/protocol/server/public.proto";
package gabriel.protocol.server.supercenter;

enum DEFAULT_MSG
{
    REGISTER_SERVER = 1;
}
    
message Register
{
    optional uint32 zone_id = 1;    
}

message Register_Rsp
{
    repeated gabriel.protocol.server.Server_Info info = 1;    
}
